samples/_failures_safe/1761730432_95d7df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b256bbe.c: In function ‘main’:
./samples/SAFE/__tmp_4b256bbe.c:150:17: error: expected ‘;’ at end of input
  150 |     print_buffer
      |                 ^
      |                 ;
./samples/SAFE/__tmp_4b256bbe.c:150:5: error: expected declaration or statement at end of input
  150 |     print_buffer
      |     ^~~~~~~~~~~~
